Add two parameter to tune the generation of pseudo cardinal points: roundness_threshold -> threshold on the roundness of the object before using more pseudo cardinal points nb_cardinal_levels -> number of levels of pseudo cardinal points

--- a/app/conf/config-icub.ini
+++ b/app/conf/config-icub.ini
@@ -14,3 +14,5 @@ grasp_bounding_box_left (-0.0 0.05 -0.05 0.05 -0.05 0.0)
 planar_obstacle (0.0 0.0 1.0 0.15)
 obstacle_safety_distance 0.005
 position_error_threshold 0.01
+roundness_threshold 1.0
+nb_cardinal_levels 1
