--- a/app/conf/config-r1.ini
+++ b/app/conf/config-r1.ini
@@ -14,3 +14,5 @@ grasp_bounding_box_left (-0.0 0.085 -0.035 0.035 -0.04 0.05)
 planar_obstacle (0.0 0.0 1.0 0.15)
 obstacle_safety_distance 0.01
 position_error_threshold 0.01
+roundness_threshold 1.0
+nb_cardinal_levels 1
